--- a/globe/templates/index.html
+++ b/globe/templates/index.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'base_map.html' %}
 {% block content %}
 
 <section class="intro">
+	<video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
+        <source src="../static/img/index_vid.mp4" type="video/mp4">
+	</video>
+
  	<div class="container text-center">
 		<div class="row">
 			<div class="col">
