--- a/globe/templates/explore.html
+++ b/globe/templates/explore.html
@@ -10,6 +10,7 @@
 				<input type="text" class="form-control form-control-md" name="filter" placeholder="Edinburgh, Dublin, Swansea, London">
 				<button type="submit" class="btn btn-glb btn-sm">Spin</button>
 			</form>
+			<i class="text text-info">{{message}}</i>
 		</div>
 	</div>
 </section>
