ui improvements across the board

--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -664,6 +664,10 @@ $greenSecondary:#77f4af;
 
 .map_search{
 	height: 100vh;
+	background: url('../img/main-bg.jpg') #004 no-repeat;
+	background-size:  cover;
+	background-position: top;
+
 
 
  	h1{
