--- a/globe/templates/user/login.html
+++ b/globe/templates/user/login.html
@@ -4,11 +4,12 @@
 <section class="register">
  	<div class="container">
 		<div class="row">
-			<div class="col-xs-12">
 				<div class="card" style="width:30rem;">
-					<div class="card-body">
+					<div class="card-head">
 						<h2 class="card-title">Log In</h2>
 						<h6 class="card-subtitle mb-5">Enter your Email and Password</h6>
+					</div>
+					<div class="card-body">
 						<form class="card-form" method="post" action="/login/">
 							<label class="card-label" for="Email">Email</label>
 							<input class="form-control" type="text" name="email" placeholder="user@example.com" />
@@ -17,12 +18,10 @@
 							<input class="form-control" name="password" type="password" />
 
 							<div class="text-center">
-								<button type="submit" class="btn btn-primary text-center" value="Log In" />
+								<button type="submit" class="btn btn-glb">Log In</button>
 							</div>
 					</div>
 				</div>
-
-			</div>
   		</div>
 	</div>
 </section>
