--- a/globe/static/scss/components.scss
+++ b/globe/static/scss/components.scss
@@ -10,19 +10,34 @@ $chrome_gradient: -webkit-linear-gradient(45deg,  #08a6f9 0%, #90fd9e 100%);
 
 
 
-$bluePrimary: #08a6f9;
+$bluePrimary: #14598D;
 $blueSecondary: #12d0f3;
-$greenPrimary: #90fd9e;
+$greenPrimary: #169660;
 $greenSecondary:#77f4af;
 
 
+$base: #2D6073;
+$accent: #81f8d6;
+
+$dark: #424c59;
+$light: #cee0f9;
+
+$white: #F0F7DA;
+
+body{
+	background: $white;
+
+}
+
 a{
-	color: $bluePrimary;
+	color: $base !important;
 	transition: all 300ms ease-in-out;
 }
-a :hover{
-	color: $blueSecondary;
+
+a:hover{
+	color: $accent !important;
 	transition: all 300ms ease-in-out;
+	text-decoration: none;
 }
 
 .nav-item .current{
@@ -33,6 +48,7 @@ a :hover{
 	box-shadow: $box-shadow;
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 	padding: 0;
+	background: $white;
 }
 
 .card-head{
@@ -112,10 +128,17 @@ a :hover{
 }
 
 .main-nav{
-	border-bottom: 4px solid $greenPrimary;
+	border-bottom: 3px solid $greenSecondary;
 	padding: 1%;
+	background: $white !important;
 }
 
+.menu{
+	color: $greenSecondary !important;
+}
+.menu :hover{
+	color: $greenPrimary;
+}
 
 .filter{
 	text-align: center;
