add menu subclass to nav

--- a/globe/templates/base.html
+++ b/globe/templates/base.html
@@ -36,7 +36,7 @@
 		<a class="navbar-brand" href="/"><img src="/static/img/brand.png" class="img-brand" style="height:2.5rem;" alt="Globe icon logo"></a>
 
 		<div class="nav navbar-nav navbar-right">
-			<a href="#0" class="toggle-nav nav-item nav-link menu" alt="toggle menu"><i class="fa fa-bars fa-2x"></i></a>
+			<a href="#0" class="toggle-nav nav-item nav-link" alt="toggle menu"><i class="fa fa-bars fa-2x menu"></i></a>
 		</div>
 	</div>
 </nav>
