prepend for actions with /user/

--- a/globe/templates/register.html
+++ b/globe/templates/register.html
@@ -9,7 +9,7 @@
 					<div class="card-body">
 						<h2 class="card-title">Create an Account</h2>
 						<h6 class="card-subtitle mb-5">It's free and only takes a minute</h6>
-						<form class="card-form" method="post" action="/register/">
+						<form class="card-form" method="post" action="/user/register/">
 							<label class="card-label" for="email">Email</label>
 							<input class="form-control" type="email" name="email" placeholder="you@example.com" />
 
