--- a/globe/templates/user/login.html
+++ b/globe/templates/user/login.html
@@ -10,7 +10,7 @@
 						<h6 class="card-subtitle mb-5">Enter your Email and Password</h6>
 					</div>
 					<div class="card-body">
-						<form class="card-form" method="post" action="/login/">
+						<form class="card-form" method="post" action="/user/login/">
 							<label class="card-label" for="Email">Email</label>
 							<input class="form-control" type="text" name="email" placeholder="user@example.com" />
 							<br />
